--- a/stylesheets/main.less
+++ b/stylesheets/main.less
@@ -323,3 +323,79 @@ nav .button-collapse {
     }
   }
 }
+
+@media (prefers-color-scheme: dark) {
+  body {
+    background: #11111a;
+    color: #fff;
+  }
+  a,
+  .rss-title {
+    color: green !important;
+  }
+  nav {
+    background: #11111a !important;
+    box-shadow: none;
+  }
+  body:not(#loginPage) nav {
+    box-shadow: none;
+  }
+  nav ul a {
+    color: #fff;
+  }
+  #root .top_controls, #standalone .top_controls {
+    background: #11111a;
+    box-shadow: none;
+  }
+  #root #secondNavBar {
+    background-color: #11111a;
+  }
+  #root #secondNavBar .navbar > li .item {
+    color: #fff;
+  }
+  .card,
+  .widget {
+    background-color: #22222a;
+    color: #fff;
+    border: 1px solid #000 !important;
+  }
+  .card .card-content,
+  #content .card-content p,
+  .rss-content, .rss-description {
+    color: #fff;
+  }
+  .widget .widgetTop {
+    background: transparent;
+  }
+  .card .card-content h2.card-title,
+  .widget h3.widgetName {
+    border-bottom: 1px solid #000;
+  }
+  .widget .widgetTop h3 {
+    color: #fff;
+  }
+  h1.card-title, h2.card-title, h3.card-title, h4.card-title {
+    color: #fff !important;
+  }
+  .card h1, .card h2, .card h3, .card h4 {
+    color: #fff;
+  }
+
+  table.dataTable thead tr th {
+    background: transparent;
+    color: #fff;
+  }
+  .theWidgetContent .card .card-content table.dataTable th, table.dataTable th, table.subDataTable th {
+    background: transparent !important;
+    color: #fff;
+  }
+  table.dataTable tr:not(.subDataTableContainer) td {
+    background: transparent !important;
+    color: #fff;
+    border-bottom: 1px solid #000 !important;
+  }
+
+  .sparkline img {
+    filter: invert(100%);
+  }
+}
